--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -33,9 +33,16 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cafe-mocha": "^0.1.12",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
-    "should": "^4.1.0"
+    "grunt-express-server": "^0.4.19",
+    "grunt-open": "^0.2.3",
+    "load-grunt-tasks": "^1.0.0",
+    "should": "^4.1.0",
+    "time-grunt": "^1.0.0"
   }
 }
