--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
     "grunt-express-server": "^0.4.19",
+    "grunt-newer": "^0.8.0",
     "grunt-open": "^0.2.3",
     "load-grunt-tasks": "^1.0.0",
     "should": "^4.1.0",
