--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-express-server": "^0.4.19",
     "grunt-newer": "^0.8.0",
     "grunt-open": "^0.2.3",
+    "jade-inheritance": "^0.1.0",
     "load-grunt-tasks": "^1.0.0",
     "should": "^4.1.0",
     "time-grunt": "^1.0.0"
