--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "body-parser": "~1.0.0",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "~1.0.1",
-    "crypto": "0.0.3",
     "debug": "~0.7.4",
     "dotenv": "^0.4.0",
     "ejs": "^1.0.0",
@@ -18,6 +17,7 @@
     "express-session": "^1.8.2",
     "forever": "0.11.x",
     "jade": "~1.3.0",
+    "mime": "^1.2.11",
     "mongoose": "^3.8.16",
     "morgan": "~1.0.0",
     "neo4j": "~1.1.0",
